# bh-cats

./: .env.example  .gitignore  README.md  colima-attach-disk-in-use.md  docker-compose.yml  北华大学猫猫网站（校园猫档案与社区）项目需求文档.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  banners.py  cats.py  comments.py  deps.py  home.py  likes.py  posts.py  upload_utils.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  banner.py  cat.py  comment.py  like.py  post.py  user.py
backend/app/schemas/: auth.py  banner.py  cat.py  comment.py  like.py  media.py  post.py
backend/app/services/: auth_service.py  banner_service.py  cat_service.py  comment_service.py  home_service.py  like_service.py  media_service.py  post_service.py
backend/bh_cats_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth_api.py  test_banners_api.py  test_cats_api.py  test_db_init.py  test_health.py  test_home_service.py  test_likes_api.py  test_media_service.py  test_posts_api.py  test_smoke_app.py
docs/superpowers/plans/: 2026-03-25-bh-cats-system.md  2026-03-26-admin-cat-image-live-management.md  2026-03-26-admin-crud-and-form-fixes.md  2026-03-26-auth-username-login-plan.md  (+4 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: main.tsx  styles.css
(+27 files in other folders)
